--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 /* Estilos personalizados para MiNuevoAmigo */
 
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 /* Colores personalizados */
 :root {
