--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,15 @@ nav{
         height: 120px;
     }
 }
+/* Carrusel de imágenes en detalle del animal */
+.carousel-img {
+    height: 550px;
+    object-fit: contain;
+    background-color: #f5f5f5;
+}
+
+.carousel-placeholder {
+    height: 550px;
+    object-fit: contain;
+    background-color: #f5f5f5;
+}
